--- a/index.html
+++ b/index.html
@@ -371,7 +371,8 @@
                         <div class="grid grid-cols-3 gap-6">
                             <!-- Revenue Result -->
                             <div class="bg-slate-800 p-6 rounded-xl border-2 border-slate-700 relative overflow-hidden">
-                                <div class="text-xs text-slate-400 font-bold mb-2 tracking-widest flex justify-between">
+                                <div
+                                    class="text-xs text-slate-400 font-bold mb-2 tracking-widest flex items-center space-x-2">
                                     <span>TOTAL REVENUE (売上)</span>
                                     <button id="btnReviewRev" onclick="reviewMainMetric('revenue')"
                                         class="text-slate-500 hover:text-emerald-400 transition z-20 relative"
@@ -392,7 +393,8 @@
 
                             <!-- Expense Result -->
                             <div class="bg-slate-800 p-6 rounded-xl border-2 border-slate-700 relative overflow-hidden">
-                                <div class="text-xs text-slate-400 font-bold mb-2 tracking-widest flex justify-between">
+                                <div
+                                    class="text-xs text-slate-400 font-bold mb-2 tracking-widest flex items-center space-x-2">
                                     <span>TOTAL EXPENSE (支出)</span>
                                     <button id="btnReviewExp" onclick="reviewMainMetric('expense')"
                                         class="text-slate-500 hover:text-emerald-400 transition z-20 relative"
@@ -413,7 +415,8 @@
 
                             <!-- Profit Result -->
                             <div class="bg-slate-800 p-6 rounded-xl border-2 border-slate-700 relative overflow-hidden">
-                                <div class="text-xs text-slate-400 font-bold mb-2 tracking-widest flex justify-between">
+                                <div
+                                    class="text-xs text-slate-400 font-bold mb-2 tracking-widest flex items-center space-x-2">
                                     <span>OPERATING PROFIT (利益)</span>
                                     <button id="btnReviewProfit" onclick="reviewMainMetric('profit')"
                                         class="text-slate-500 hover:text-emerald-400 transition z-20 relative"
